--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.1",
     "nodemon": "^2.0.21",
-    "openai": "^3.2.1",
-    "web3": "^1.8.2"
+    "openai": "^3.2.1"
   }
 }
